--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -17,12 +17,16 @@ $secondary-color:hsl(72, 68%, 64%);
 
 * {
   box-sizing: border-box;
-}  
+}
 
 body {
   padding: 0;
   margin: 0;
   font-family: "LexendDeca", sans-serif;
+}
+
+h2 {
+  font-weight: 600;
 }
 
 .login-container {
